--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux todo-list",
+  "name": "react-redux-todo-list",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -7,10 +7,13 @@
     "redux": "^3.6.0"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
+    "node-uuid": "^1.4.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "redux": "^3.3.1",
-    "react-redux": "^4.0.0"
+    "react-redux": "^4.0.0",
+    "react-router": "^3.0.2",
+    "redux": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
